[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/AttackController.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Boxy.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player Scripts/PlayerDefenseController.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player Scripts/ClassManager.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 32 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
position = Vector2( 704, 455 )
z_index = 2
script = ExtResource( 1 )

[node name="AttackController" type="Node2D" parent="."]
script = ExtResource( 2 )
shape = SubResource( 8 )
show_in_range = true

[node name="DEBUG attack_range" type="Line2D" parent="AttackController"]
z_index = 2
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.945098, 1, 0, 0.478431 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 5 )
script = ExtResource( 4 )

[node name="ClassManager" type="Node2D" parent="."]
script = ExtResource( 5 )

[connection signal="get_class_stats" from="." to="ClassManager" method="_get_class_stats"]
[connection signal="switch_class" from="." to="ClassManager" method="_switch_class"]
[connection signal="switch_class" from="." to="AttackController" method="_on_switch_class"]
[connection signal="get_alt_class" from="AttackController" to="ClassManager" method="_get_alt_class"]
[connection signal="get_class_stats" from="AttackController" to="ClassManager" method="_get_class_stats"]
[connection signal="get_main_class" from="AttackController" to="ClassManager" method="_get_main_class"]
